--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         android:layout_height="50dp"
         android:textSize="16sp"
         android:textColor="@color/black"
-        android:hint="身份证号码"
+        android:hint="用户名"
         android:maxLines="1"
         android:padding="5dp"
         android:layout_marginTop="100dp"
