--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingTop="130dp"
-        android:text="医脉通计算公式"
+        android:text="医脉通"
         android:textColor="#3F51B5"
         android:textSize="25sp" />
 
@@ -42,6 +42,13 @@
         android:padding="5dp"
         android:textColor="@color/black"
         android:textSize="16sp" />
+    <TextView
+        android:id="@+id/T_cp"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" 忘记密码?"
+        android:textColor="@color/purple_500"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
